@@ -28,9 +28,9 @@ this repository contains the full copyright notices and license terms. -->
             <field name="global_p" eval="False"/>
             <field name="perm_read" eval="False"/>
         </record>
-        <record model="ir.rule.group-res.group" id="rule_group_category_accounting-account_admin">
+        <record model="ir.rule.group-res.group" id="rule_group_category_account-account_product_admin">
             <field name="rule_group" ref="rule_group_category_accounting"/>
-            <field name="group" ref="account.group_account_admin"/>
+            <field name="group" ref="group_account_product_admin"/>
         </record>
         <record model="ir.rule" id="rule_category_accounting_accounting">
             <field name="domain" eval="[('accounting', '=', True)]" pyson="1"/>
@@ -49,5 +49,16 @@ this repository contains the full copyright notices and license terms. -->
             <field name="name">template_tree</field>
         </record>
 
+        <record model="ir.model.field.access" id="access_template_account_category">
+            <field name="field" search="[('model.model', '=', 'product.template'), ('name', '=', 'account_category')]"/>
+            <field name="perm_read" eval="True"/>
+            <field name="perm_write" eval="False"/>
+        </record>
+        <record model="ir.model.field.access" id="access_template_account_category_account_product_admin">
+            <field name="field" search="[('model.model', '=', 'product.template'), ('name', '=', 'account_category')]"/>
+            <field name="group" ref="group_account_product_admin"/>
+            <field name="perm_read" eval="True"/>
+            <field name="perm_write" eval="True"/>
+        </record>
     </data>
 </tryton>
