@@ -8,8 +8,8 @@ depends:
 extras_depend:
     analytic_account
 xml:
+    account.xml
     product.xml
     configuration.xml
-    account.xml
     message.xml
     analytic_account.xml
