@@ -1,3 +1,5 @@
+* Add group to edit accounting of products
+
 Version 6.0.0 - 2021-05-03
 * Bug fixes (see mercurial logs for details)
 * Add deductible rate for supplier taxes
